more robust nav bar, fixed bug where top right links were being overlapped by title on large screens

--- a/css/main.css
+++ b/css/main.css
@@ -5008,11 +5008,9 @@ a.text-dark:hover, a.text-dark:focus {
   background-color: white;
   opacity: 0.98;
   backdrop-filter: blur(4px); }
-  .navbar .nav-title-box {
-    width: 50%;
-    left: 25%;
-    right: 25%; }
   .navbar .nav-title {
+    width: 100%;
+    left: 0;
     color: #595959;
     text-transform: uppercase;
     letter-spacing: .1em;
@@ -5030,6 +5028,8 @@ a.text-dark:hover, a.text-dark:focus {
     transform: translate(-2px);
     fill: #35C4E3;
     transition: 0.2s; }
+  .navbar .above-title {
+    z-index: 10; }
   @media (max-width: 767.98px) {
     .navbar .arrowLeft {
       margin-left: -24px; }
